# rust_di_pattern

cake_pattern/: Cargo.toml  Makefile.toml
cake_pattern/app/: Cargo.toml
cake_pattern/app/src/: handler.rs  main.rs
cake_pattern/domain/: Cargo.toml
cake_pattern/domain/src/: lib.rs
cake_pattern/infra/database/: Cargo.toml
cake_pattern/infra/message_queue/src/: lib.rs
cake_pattern/infra/repository/src/: lib.rs
cake_pattern/service/: Cargo.toml
cake_pattern/service/src/: lib.rs
cake_pattern/use_case/: Cargo.toml
cake_pattern/use_case/src/: lib.rs
has_all_dependency/: Cargo.toml
has_all_dependency/app/src/: handler.rs  main.rs
has_all_dependency/domain/src/: lib.rs
has_all_dependency/infra/database/src/: lib.rs
has_all_dependency/infra/message_queue/: Cargo.toml
has_all_dependency/infra/repository/: Cargo.toml
has_all_dependency/infra/repository/src/: lib.rs
has_all_dependency/service/: Cargo.toml
has_all_dependency/service/src/: lib.rs
has_all_dependency/use_case/: Cargo.toml
has_all_dependency/use_case/src/: lib.rs
trait_bound/app/src/: handler.rs  main.rs
trait_bound/domain/src/: lib.rs
trait_bound/infra/repository/src/: lib.rs
trait_bound/service/: Cargo.toml
trait_bound/service/src/: lib.rs
trait_bound/use_case/: Cargo.toml
trait_bound/use_case/src/: lib.rs
