[workspace]
members = [
    "app",
    "domain",
    "infra/database",
    "infra/message_queue",
    "infra/repository",
    "service",
    "use_case",
]

[workspace.dependencies]
app = { path = "app" }
database = { path = "infra/database" }
domain = { path = "domain" }
message_queue = { path = "infra/message_queue" }
repository = { path = "infra/repository" }
use_case = { path = "use_case" }
service = { path = "service" }

async-trait = "0.1.68"
mockall = "0.11.4"
tokio = { version = "1.28.2", features = ["macros", "rt-multi-thread"] }
anyhow = "1.0.71"
