[package]
name = "app"
version = "0.1.0"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
database = { workspace = true }
domain = { workspace = true }
message_queue = { workspace = true }
repository = { workspace = true }
service = { workspace = true }
tokio = { workspace = true }
use_case = { workspace = true }
mockall = { workspace = true }
async-trait = { workspace = true }
anyhow = { workspace = true }
