[package]
name = "service"
version = "0.1.0"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
domain = { workspace = true }
use_case = { workspace = true }
tokio = { workspace = true }
