[package]
name = "use_case"
version = "0.1.0"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
domain = { workspace = true }

anyhow = { workspace = true }
async-trait = { workspace = true }
mockall = { workspace = true }
tokio = { workspace = true }
